--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-#spring.datasource.url=jdbc:mariadb://192.168.0.15:3306/iis_m01
-#spring.datasource.username=root
-#spring.datasource.password=2isys
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://192.168.0.15:3306/iis_m01
+spring.datasource.username=root
+spring.datasource.password=2isys
 
 #spring.second-datasource.driver-class-name=org.mariadb.jdbc.Driver
 #spring.second-datasource.url=jdbc:mariadb://192.168.0.15:3306/log_g01
