--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,27 +1,34 @@
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://192.168.0.15:3306/iis_m01
-spring.datasource.username=root
-spring.datasource.password=2isys
+# 첫 번째 데이터 소스 구성
+spring.datasource.first.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.first.jdbc-url=jdbc:mariadb://192.168.0.15:3306/iis_m01
+spring.datasource.first.username=root
+spring.datasource.first.password=2isys
 
-#spring.second-datasource.driver-class-name=org.mariadb.jdbc.Driver
-#spring.second-datasource.url=jdbc:mariadb://192.168.0.15:3306/log_g01
-#spring.second-datasource.username=root
-#spring.second-datasource.password=2isys
+# 두 번째 데이터 소스 구성
+spring.datasource.second.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.second.jdbc-url=jdbc:mariadb://192.168.0.15:3306/log_g01
+spring.datasource.second.username=root
+spring.datasource.second.password=2isys
 
-#update the schema with the given values.
-spring.jpa.hibernate.ddl-auto=none
-#To beautify or pretty print the SQL
-spring.jpa.properties.hibernate.format_sql=true
-#show sql
-spring.jpa.properties.hibernate.show-sql=true
-#show parameter binding
+
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:mariadb://192.168.0.15:3306/iis_m01
+#spring.datasource.username=root
+#spring.datasource.password=2isys
+
+# 추가 데이터 소스 (log_g01)
+#spring.datasource.logg01.url=jdbc:mariadb://192.168.0.15:3306/log_g01
+#spring.datasource.logg01.username=root
+#spring.datasource.logg01.password=2isys
+#spring.datasource.logg01.driver-class-name=org.mariadb.jdbc.Driver
+
+
 logging.level.org.hibernate.type.descriptor.sql=DEBUG
 
 logging.level.org.hibernate.SQL=DEBUG
-
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 spring.jwt.secret="VlwEyVBsYt9V7zq57TejMnVUyzblYcfPQye08f7MGVA9XkHa"
 
 # mybatis ?? ??
 mybatis.mapper-locations=mybatis/mapper/*.xml
+logging.level.org.mybatis=DEBUG
