--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -26,8 +26,7 @@ spring.datasource.second.password=2isys
 logging.level.org.hibernate.type.descriptor.sql=DEBUG
 
 logging.level.org.hibernate.SQL=DEBUG
-
-spring.jwt.secret="VlwEyVBsYt9V7zq57TejMnVUyzblYcfPQye08f7MGVA9XkHa"
+jwt.secret="VlwEyVBsYt9V7zq57TejMnVUyzblYcfPQye08f7MGVA9XkHa"
 
 # mybatis ?? ??
 mybatis.mapper-locations=mybatis/mapper/*.xml
