--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.first.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.first.jdbc-url=jdbc:mariadb://192.168.0.15:3306/iis_m01
 spring.datasource.first.username=root
 spring.datasource.first.password=2isys
+server.port = 8082
 
 # 두 번째 데이터 소스 구성
 spring.datasource.second.driver-class-name=org.mariadb.jdbc.Driver
@@ -26,7 +27,7 @@ spring.datasource.second.password=2isys
 logging.level.org.hibernate.type.descriptor.sql=DEBUG
 
 logging.level.org.hibernate.SQL=DEBUG
-jwt.secret="VlwEyVBsYt9V7zq57TejMnVUyzblYcfPQye08f7MGVA9XkHa"
+spring.jwt.secret="VlwEyVBsYt9V7zq57TejMnVUyzblYcfPQye08f7MGVA9XkHa"
 
 # mybatis ?? ??
 mybatis.mapper-locations=mybatis/mapper/*.xml
