spring security JWT, Refreahtoken success

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-# 첫 번째 데이터 소스 구성
+# ? ?? ??? ?? ??
 spring.datasource.first.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.first.jdbc-url=jdbc:mariadb://192.168.0.15:3306/iis_m01
 spring.datasource.first.username=root
 spring.datasource.first.password=2isys
-server.port = 8082
+server.port = 8080
 
-# 두 번째 데이터 소스 구성
+# ? ?? ??? ?? ??
 spring.datasource.second.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.second.jdbc-url=jdbc:mariadb://192.168.0.15:3306/log_g01
 spring.datasource.second.username=root
@@ -17,7 +17,7 @@ spring.datasource.second.password=2isys
 #spring.datasource.username=root
 #spring.datasource.password=2isys
 
-# 추가 데이터 소스 (log_g01)
+# ?? ??? ?? (log_g01)
 #spring.datasource.logg01.url=jdbc:mariadb://192.168.0.15:3306/log_g01
 #spring.datasource.logg01.username=root
 #spring.datasource.logg01.password=2isys
